# aice-chatbot-demo

./: README.md  main.py  pyproject.toml
ai-sdk/: README.md  package-lock.json  package.json
ai-sdk/app/: layout.tsx  page.tsx
ai-sdk/app/api/chat/: route.ts
langchain-streamlit/: README.md
