[project]
name = "aice-chatbot-demo"
version = "0.1.0"
description = "AICE chatbot demo - Week 2 complete solution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain-core>=0.3.60",
    "langchain-google-genai>=2.1.4",
    "streamlit>=1.45.0",
]
